# number_challenge

./: .gitignore  LICENSE  README.md  THOUGHT_PROCESS.md  input.txt  main.py  number_extractor.py  pyproject.toml  wordifyer.py
.github/workflows/: ci.yml
tests/: test_conversion.py  test_extractor.py  test_validation.py
